force-app/main/default/objects/Schedule_Report_Config__c/Schedule_Report_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Schedule Report Config</label>
</CustomObject>