force-app/main/default/objects/Schedule_Report_Config__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>