force-app/main/default/objects/Schedule_Report_Config__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field for setting file name when sending to recipient</inlineHelpText>
    <label>File Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>