force-app/main/default/objects/Schedule_Report_Config__c/fields/Report_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Unique_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report Unique Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>